# review_management/app/models/review.js
@@ -1,16 +1,15 @@
 var mongoose = require('mongoose');
 const autoIncrement = require("mongoose-auto-increment");
-var test = require('mongoose');
 
 var ReviewSchema = new mongoose.Schema({
   review_Id: { 
     type: Number,
-    min: [1000, 'Must be at least 10'],
+    min: [1000, 'Must be at least 1000'],
     max: 1000000000 
   },
-  order_Id:{ 
+  orderId:{ 
     type: Number,
-    min: [1000, 'Must be at least 10'],
+    min: [100, 'Must be at least 100'],
     max: 1000000000 
   },
   rating: { 
@@ -23,11 +22,22 @@ var ReviewSchema = new mongoose.Schema({
   minlength: 4,
   maxlength: 200,
   message :'String length should be within 4 to 20 Characters'   
+  },   
+  restaurantId: {
+    type: Number,
+    unique: true,
+    min: [999, 'Must be at least 1'],
+    max: 1000000000 
+  },  
+  customerId: {
+    type: Number,
+    min: [1000, 'Must be at least 10'],
+    max: 1000000000,
+    unique: true,
   }
-/*   created_at: {type: String},
-  updated_at: {type: String} */
-}, { collection: 'review' });
+}, { collection: 'review' , timestamps: true });
 
+autoIncrement.initialize(mongoose.connection);
 ReviewSchema.plugin(autoIncrement.plugin, {
   model: "review", // collection or table name in which you want to apply auto increment
   field: "review_Id", // field of model which you want to auto increment
